# the-annotated-transformer

./: README.md  pyproject.toml
test/: test_transformer.py
the-annotated-transformer/: transformer.py
transformer/: transformer.py
