[project]
name = "the-annotated-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "polars>=1.23.0",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchtext>=0.18.0",
    "vl-convert-python>=1.7.0",
]
